--- a/core/pom.xml
+++ b/core/pom.xml
@@ -103,6 +103,11 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.serphacker.serposcope</groupId>
+            <artifactId>core</artifactId>
+            <version>2.10.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
